...
                        app:srcCompat="@drawable/ic_truck" />

                </android.support.constraint.ConstraintLayout>


                <TextView
                    android:id="@+id/titleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
...
